public/style.css
@font-face {
    font-family: druk;
    src: url(/assets/Druk-Wide-Medium.otf);
    /* src: url(/assets/Druk-Wide-Bold.otf); */
}

* {
    margin: 0;
    font-family: 'druk', 'monoscript';
    user-select: none;
    color: white;
    text-transform: uppercase;
}

/* TODO: media queries for mobile devices */

html {
    /* display: flex;
    justify-content: center; */
    width: 100vw;
    height: 100vh;
    min-height: 700px;
}

body {
    width: 100%;
    height: 100%;
    background-color: black;
    transition: background-color 0.5s linear;
    opacity: 0.9;
    display: flex;
    justify-content: center;
    align-items: center;
}

#boxWrap {
    height: 100px;
    width: 100px;
}

#background {
    position: absolute;
    z-index: -2;
    width: 100%;
    height: 100vh;
    min-height: 750px;
    transition: filter 0.5s linear;
    overflow: hidden;
    background: url(/assets/runway1.gif) no-repeat fixed center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

#end {
    display: none;
    justify-content: center;
    align-items: center;
    position: absolute;
    z-index: 5;
    width: 100%;
    height: 100%;
    opacity: 0;
    font-size: 100px;
    transition: opacity 1s;
}

#perspective {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 500px;
    /* height: 100vh; */
    perspective: 1500px;
    /* background-color: red; */
}

#info-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 750px;
    opacity: 0;
    pointer-events: auto;
    transition: all 4s;
    transform: rotateY(0deg) translateZ(0px);
    /* background-color: red; */
}

#info-wrapper img {
    width: 40%;
    margin: 20px 0px 10px 0px;
}

#info-wrapper p {
    font-size: 10px;
    margin: 10px 20px 0px 20px;
}

#info-wrapper button {
    outline: none;
    background-color: transparent;
    font-size: 16px;
    border: 2px solid white;
    margin-top: 20px;
    cursor: pointer;
    padding: 8px;
}

#info-wrapper button:active {
    background-color: black;
}

#content-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    min-height: 750px;
    opacity: 0;
    pointer-events: none;
    transform: rotateY(180deg) translateZ(3px);
    transition: all 4s;
    /* background-color: blue; */
}

#logo {
    display: block;
    width: 150px;
    margin: 0px auto 40px auto;
    cursor: pointer;
}

#runwayConatiner {
    display: flex;
    justify-content: center;
    width: 100%;
    height: 15%;
}

#runwayConatiner div {
    /* display: flex;
    align-items: center; */
    position: relative;
    display: block;
    width: 80%;
    margin: 0 auto 30px auto;
    height: 130px;
    border: 3px solid white;
    overflow: hidden;
}

#runway {
    position: absolute;
    width: 100%;
    top: -50%;
    filter: hue-rotate(0deg);
    transition: filter 0.5s linear;
}

#stats {
    display: none;
    justify-content: center;
    align-items: center;
    position: absolute;
    z-index: 2;
    width: 100%;
    height: 100%;
    font-size: 20px;
    animation: fade 0.7s linear;
}

#chatContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
    width: 100%;
    /* border: 2px solid lime; */
}

#responseWrap {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 80%;
    height: 130px;
    margin: 0 auto;
    /* min-height: 120px; */
    border: 3px solid white;
    font-size: 20px;
    overflow: auto;
}

@keyframes fade {
    0%    {opacity: 0}
    100%  {opacity: 1}
}

#response {
    display: none;
    animation: fade 0.7s linear;
    text-align: center;
    /* transition: opacity 0.7s linear; */
    /* text-shadow: white 0px 0px 15px; */
}

#inputWrap {
    display: flex;
    align-items: center;
    width: 80%;
    height: 130px;
    margin: -3px auto;
    /* min-height: 120px; */
    border: 3px solid white;
    border-top: none;
    overflow: auto;
}

textarea {
    display: none;
    width: 98%;
    height: 20px;
    font-size: 20px;
    resize: none;
    border: none;
    outline: none;
    text-align: center;
    background-color: transparent;
    transition: opacity 0.7s linear;
}

#optionsWrap {
    display: none;
    justify-content: space-around;
    align-items: center;
    width: calc(6px + 100%);
    height: 100%;
    opacity: 0;
    transition: opacity 0.7s linear;
}

.options {
    /* width: 100%; */
    font-size: 20px;
    cursor: pointer;
    border: 3px solid white;
    padding: 2px 10px 2px 10px;
    background-color: transparent;
    outline: none;
    animation: fade 0.7s linear;
}

.options:active {
    background-color: black;
}

#response::-webkit-scrollbar, textarea::-webkit-scrollbar {
  display: none;
}

#response, textarea {
  -ms-overflow-style: none;
}

#sendWrap {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    width: calc(80% + 6px);
}

#send {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 30px;
    height: 30px;
    border: 3px solid white;
    font-size: 1.2em;
    background-color: transparent;
    pointer-events: auto;
    outline: none;
    cursor: pointer;
}

#send:active {
    background-color: black;
}

#square {
    margin: 50px auto 0 auto;
    display: flex;
    align-items: flex-end;
    /* width: 50px; */
    height: 13%;
    padding-bottom: 30px;
    /* background-color: lime; */
}

#square img {
    width: 100%;
}

@media screen and (min-width: 500px) {

    /* #info-wrapper, #content-wrapper {
        width: 500px;
    } */

}

@media screen and (max-width: 380px) {

   #info-wrapper, #content-wrapper {
        width: 380px;
        /* background-color: lime; */
    }

    #responseWrap, #inputWrap, #runwayConatiner div {
        width: 90%;
    }

    #sendWrap {
        width: calc(90% + 6px);
    }

    #response, textarea, .options, #stats {
        font-size: 16px;
    }

}

